--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,9 @@
-buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-        maven { url 'https://raw.github.com/xujiaao/mvn-repository/master/releases' }
-    }
-
-    dependencies {
-        classpath 'com.github.xujiaao:aarLinkSources:1.0.0'
-    }
-}
-
 int MAJOR_VERSION = 1
 int MINOR_VERSION = 1
 int VERSION_PATCH = 1
 int BUILD_NUMBER = 1
 
 apply plugin: 'com.android.application'
-apply plugin: 'aar-link-sources'
 
 def buildNumber = BUILD_NUMBER  // any build number for local build
 def code = MAJOR_VERSION * 10000 + MINOR_VERSION * 1000 + VERSION_PATCH * 100 + buildNumber
@@ -27,7 +15,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 26
 
         versionCode code
         versionName "${MAJOR_VERSION}.${MINOR_VERSION}.${VERSION_PATCH}"
@@ -86,34 +74,23 @@ android {
     }
 }
 
-repositories {
-    jcenter()
-    mavenCentral()
-    maven { url 'https://maven.fabric.io/public' }
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-    flatDir {
-        dirs 'repo'
-    }
-}
-
 dependencies {
     compile 'com.yandex.android:speechkit:2.5.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
+    compile "com.android.support:support-v4:${rootProject.ext.supportVersion}"
+    compile "com.android.support:recyclerview-v7:${rootProject.ext.supportVersion}"
+    compile "com.android.support:design:${rootProject.ext.supportVersion}"
 
     compile 'com.squareup.retrofit:retrofit:1.9.0'
 
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.0.1'
     compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
 
-    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.8.3@aar') {
-        transitive=true
+    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.8.3@aar') {
+        transitive = true
     }
-    aarLinkSources 'com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.8.3:sources@jar'
 
     compile 'com.yandex.android:mobmetricalib:2.21@aar'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
