--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 ext {
-    compileSdkVersion = 23
-    buildToolsVersion = '21.1.2'
+    compileSdkVersion = 26
+    buildToolsVersion = '26.0.1'
     applicationId = "ru.yandex.subtitles"
+    supportVersion = '26.1.0'
 }
 buildscript {
-
     repositories {
-        mavenCentral()
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:2.3.3'
     }
-
 }
 
 allprojects {
     repositories {
-        mavenCentral()
+        jcenter()
+        maven { url "https://maven.google.com" }
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        flatDir {
+            dirs '../repo'
+        }
     }
 }
