Add test dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,8 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
         transitive = true;
     }
+
+    testCompile "org.robolectric:robolectric:3.4.2"
+    testCompile "junit:junit:4.12"
+    testCompile "org.mockito:mockito-core:2.10.0"
 }
