--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
         transitive = true;
     }
 
+    compile "io.reactivex.rxjava2:rxjava:2.1.4"
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+
     testCompile "org.robolectric:robolectric:3.4.2"
     testCompile "junit:junit:4.12"
     testCompile "org.mockito:mockito-core:2.10.0"
